fix(collections/dashboard): disable resizing and reordering on small sizes

--- a/apps/client/src/widgets/collections/dashboard/index.css
+++ b/apps/client/src/widgets/collections/dashboard/index.css
@@ -22,6 +22,10 @@
         }
     }
 
+    .grid-stack-static .dashboard-widget-header {
+        cursor: default;
+    }
+
     .dashboard-widget-header {
         display: flex;
         align-items: center;
